[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/GameTemplate/GUI/Buttons/DefaultButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainMenu/TitleScreenContainer.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/reaj.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 1.0
bg_color = Color( 0.0705882, 0.305882, 0.537255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 1.0
bg_color = Color( 0.227451, 0.266667, 0.4, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 1.0
bg_color = Color( 0.14902, 0.168627, 0.266667, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0705882, 0.305882, 0.537255, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
content_margin_right = 2.0
content_margin_top = 0.0
content_margin_bottom = 1.0
bg_color = Color( 0.14902, 0.168627, 0.266667, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0 )
corner_detail = 1
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 1.0
anti_aliasing = false

[node name="VBoxMain" type="VBoxContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 256.0
margin_bottom = 258.0
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterLogo" type="CenterContainer" parent="."]
margin_right = 240.0

[node name="Logo" type="TextureRect" parent="CenterLogo"]
visible = false
margin_left = 40.0
margin_top = -80.0
margin_right = 200.0
margin_bottom = 80.0
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 4.0
margin_right = 240.0
margin_bottom = 242.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 53.0
margin_right = 187.0
margin_bottom = 238.0
size_flags_vertical = 3
custom_constants/separation = 8

[node name="NewGame" parent="HBoxContainer/ButtonContainer" groups=[
"MainMenu",
] instance=ExtResource( 1 )]
margin_right = 134.0
margin_bottom = 35.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "New Game"

[node name="Options" parent="HBoxContainer/ButtonContainer" instance=ExtResource( 1 )]
margin_top = 43.0
margin_right = 134.0
margin_bottom = 78.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Options"

[node name="Exit" parent="HBoxContainer/ButtonContainer" instance=ExtResource( 1 )]
visible = false
margin_top = 86.0
margin_right = 134.0
margin_bottom = 121.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
text = "Exit"
[connection signal="pressed" from="HBoxContainer/ButtonContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/ButtonContainer/Exit" to="." method="_on_Exit_pressed"]
